force-app/main/default/objects/SMS_Send_Condition__c/SMS_Send_Condition__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>SMS Send Condition</description>
    <label>SMS Send Condition</label>
</CustomObject>