force-app/main/default/objects/SMS_Send_Condition__c/fields/Compare_Static_Operation__c.field-meta.xml
<CustomField>
    <fullName>Compare_Static_Operation__c</fullName>
    <description>COMPAREC possible values ==, !=, &lt;, &lt;=, &gt;, &gt;=
FIND_BY_RECORDTYPE possible values Field Apiname&gt; Example: Id, Account.</description>
    <inlineHelpText>https://github.com/jdcrensh/apex-evalex</inlineHelpText>
    <label>Compare Static Operation / Field ApiName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>