force-app/main/default/objects/SMS_Send_Condition__c/fields/Compare_Static_Value__c.field-meta.xml
<CustomField>
    <fullName>Compare_Static_Value__c</fullName>
    <label>Compare Static Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>