force-app/main/default/objects/SMS_Send_Condition__c/fields/Condition_Type__c.field-meta.xml
<CustomField>
    <fullName>Condition_Type__c</fullName>
    <description>possible values CHANGEC, COMPAREC,FIND_BY_RECORDTYPE,CONTAINS,ISNULL,ISNOTNULL</description>
    <inlineHelpText>possible values CHANGEC, COMPAREC,FIND_BY_RECORDTYPE,CONTAINS,ISNULL,ISNOTNULL</inlineHelpText>
    <label>Condition Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>