force-app/main/default/objects/SMS_Send_Condition__c/fields/FieldApiName__c.field-meta.xml
<CustomField>
    <fullName>FieldApiName__c</fullName>
    <label>FieldApiName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>