force-app/main/default/objects/SMS_Send_Condition__c/fields/IsInsert__c.field-meta.xml
<CustomField>
    <fullName>IsInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsInsert</label>
    <type>Checkbox</type>
</CustomField>