force-app/main/default/objects/SMS_Send_Condition__c/fields/Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Id__c</fullName>
    <description>Notification Id</description>
    <label>Notification Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>