force-app/main/default/objects/SMS_Send_Condition__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>When Notification condition equals Custom Logic</description>
    <inlineHelpText>1</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>