force-app/main/default/objects/SMS_Send_Condition__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>ObjectApiName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>